--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,173 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Raleway', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+section{
+  margin-bottom: 60px;
+}
+
+.h1{
+  font-size: 2rem;
+  font-family: 'Raleway', sans-serif;
+  font-weight:normal
+}
+.h2{
+  font-size: 1.8rem;
+  font-family: 'Raleway', sans-serif;
+  font-weight:normal
+}
+.h3{
+  font-size: 1.6rem;
+  font-family: 'Raleway', sans-serif;
+}
+.h4{
+  font-size: 1.4rem;
+  font-family: 'Raleway', sans-serif;
+}
+.h5{
+  font-size: 1.2rem;
+  font-family: 'Raleway', sans-serif;
+}
+
+
+h1{
+  font-size: 2rem;
+  font-family: 'Raleway', sans-serif;
+  margin: 0;
+  margin-top: 0;
+}
+h5{
+  font-size: 1.2rem;
+  font-family: 'Raleway', sans-serif;
+  margin: 0;
+  margin-top: 0;
+}
+p{
+  font-size: 0.85rem;
+  font-family: 'Raleway', sans-serif;
+  margin: 0;
+  line-height: 1.8;
+}
+
+
+
+.about-us-office{
+  width: 700px;
+  object-fit: cover;
+}
+
+.home-title{
+  margin-bottom: 10px;
+}
+
+.site-wide-margin{
+  max-width: 1000px;
+  margin: 0 auto;
+}
+@media (max-width: 1300px) {
+  .site-wide-margin{
+    width:calc(100% - 75px)
+  }
+}
+@media (max-width: 1150) {
+  .about-us-office{
+    width: 100%;
+  }
+  .no-hat{
+    background-position: center;
+  }
+  .h1{
+    font-size: 1.6rem;
+  }
+  .h2{
+    font-size: 1.4rem;
+  }
+  .h3{
+    font-size: 1.2rem;
+  }
+  .h4{
+    font-size: 1.0rem;
+  }
+  .h5{
+    font-size: 0.8rem;
+  }
+  h1{
+    font-size: 1.6rem;
+  }
+  h5{
+    font-size: 0.8rem;
+  }
+  p{
+    font-size: 0.65rem;
+    line-height: 1.6;
+  }
+}
+
+ul{
+  list-style-position: inside;
+  padding-left: 0; 
+}
+
+.error-cover{
+  background: url("assets/girl_hat.jpg");
+  height: 400px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.error-cover p{
+  color: red;
+}
+
+.no-hat{
+  background: url("assets/girl-no-hat.jpg");
+  height: 500px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.no-hat-info{
+  background-color: rgba(71, 64, 55, 0.74);
+  color: white;
+  padding: 10px 20px 20px 20px ;
+}
+
+.no-hat-container{
+  display: flex;
+  align-content: center;
+}
+
+.office{
+  margin-bottom: 40px;
+}
+
+.office-img{
+  background-image: url("assets/office1.jpg");
+  height: 100%;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.about-us-office-img{
+  background-image: url("assets/office1.jpg");
+  height: 400px;
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: center;
+}
+
+.office-img-top{
+  display: none;
+}
+@media (max-width: 768px) {
+
+  .office-img-bot{
+      display: 
+      none;
+  }
+  .office-img-top{
+  display: block;
+}
 }
